<resources>
    <string name="app_name">E-Wallet</string>
    <string name="home">Home</string>
    <string name="payment">Pagamentos</string>
    <string name="transaction">Movimentos</string>
    <string name="card">card</string>
    <string name="account_name">Nome da Conta</string>
    <string name="iban">Iban</string>
    <string name="pin">pin</string>
    <string name="accounts">Contas</string>
    <string name="balances">balances</string>
    <string name="balance">balance</string>
    <string name="balance_tag">Saldo</string>
    <string name="iban_tag">Iban</string>
    <string name="transactions">Movimentos</string>
    <string name="date">date</string>
    <string name="amount">amount</string>
    <string name="title_activity_add_account">Adicionar conta</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="account_id">Iban</string>
    <string name="banks">Bancos</string>
    <string name="with_balance">With Balance</string>
    <string name="add">Adicionar</string>
    <string name="add_new_account">Adicionar nova conta</string>
    <string name="wallet_balance">Saldo acumulado</string>
    <string name="wallet_balance_value">Wallet balance value</string>
    <string name="user">Utilizador</string>
    <string name="first_name">Primeiro Nome</string>
    <string name="last_name">Último Nome</string>
    <string name="check_password">Confirmar Password</string>
    <string name="no_accounts">Sem contas associadas</string>
    <string name="add_new">Adicione as suas contas no botão acima</string>
    <string name="empty_transactions">Movimentos indisponíveis</string>
    <string name="empty_balance">Saldo indisponível</string>
    <string name="sign_out">Sair</string>
    <string name="transfers">Transferências</string>
    <string name="dummy_id">9348694382948392842948583</string>
    <string name="dummy_date">2020-05-24</string>
    <string name="dummy_balance">0</string>
    <string name="delete_account">Apagar conta</string>
    <string name="manage_accounts">Apagar contas</string>
    <string name="manage">Apagar contas</string>
    <string name="euro">€</string>
    <string name="debit">Agendar débito</string>
    <string name="payments">Pagamentos</string>
    <string name="value">Valor</string>
    <string name="transfer">Transferências</string>
    <string name="entity">Entidade</string>
    <string name="reference">Referência</string>
    <string name="frequency">Frequência</string>
</resources>
