<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/card"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_payment_black_24dp"
            android:layout_marginRight="8dp"
            android:tint="@color/colorPrimary"
            android:contentDescription="@string/payment"
            android:layout_marginLeft="5dp" />

        <TextView
            android:id="@+id/transactionId"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/card"
            android:layout_toRightOf="@id/card"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/dummy_id"
            android:layout_marginLeft="20dp"
            android:textColor="@color/text"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/amount"
            android:layout_toEndOf="@id/card"
            android:layout_toRightOf="@id/card"
            android:layout_marginStart="20dp"
            android:text="@string/dummy_date"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/amount"
            android:text="@string/dummy_balance"
            android:layout_toEndOf="@id/date"
            android:textColor="#00e676"
            android:layout_width="220dp"
            android:layout_height="24dp"
            android:textSize="14sp"
            android:layout_marginStart="180dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/transaction"/>

    </RelativeLayout>


</androidx.cardview.widget.CardView>